<?xml version="1.0"?>
<package>
<name>drone_control</name>
<version>0.0.1</version>
<description>The my_first_ros_pkg package</description>
<maintainer email = "aaa@bbb.jp">Anonymous</maintainer>
<license>BSD</license>
<url type = "website"> http://irvs.github.io/ros_tms/</url>
<url type="repository">https://github.com/irvs/irvs_ros_tutorials.git</url>
<author email = "aaa@bbb.jp">Anonymous</author>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>std_msgs</build_depend>
<build_depend>roscpp</build_depend>
<run_depend>std_msgs</run_depend>
<run_depend>roscpp</run_depend>
<export>
</export>
</package>
